2008-12-19   <> 

	* MainWindow.cs: Changed the event that quits the application from Destroyed
	  to DeleteEvent, else we can't get the last window size when the window
	  is already gone. (closes trac bug #121)

2008-12-17   <> 

	* Chats/ChatView.cs: Only check if text was selected, instead of checking if
	  the chat has a selection, as the property is overridden in
	  GroupChatView. (part of fixing trac bug #112)
	* Chats/GroupChatView.cs: Destroy the selection when the treeview looses the
	  focus and don't let the context menu grab the focus. (part of fixing
	  trac bug #112)

2008-12-17   <> 

	* Preferences/PreferencesDialog.cs: Renamed ModeColor to EventColor.
	* Chats/ChatView.cs: Added HasEvent property and use it in AddMesage() with
	  checking MessageType.

2008-10-08   <> 

	* Entry.cs: support unicode input using ctrl+shift+u+hexnumber

2008-09-04  Mirco Bauer <meebey@meebey.net> 

	* Preferences/ServerView.cs,
	  gtk-gui/Smuxi.Frontend.Gnome.QuickConnectDialog.cs,
	  gtk-gui/Smuxi.Frontend.Gnome.SteticPreferencesDialog.cs,
	  gtk-gui/gui.stetic, QuickConnectDialog.cs: Implemented hide/unhide
	  password entries. (closes trac ticket #116)

2008-09-03  Mirco Bauer <meebey@meebey.net> 

	* FindGroupChatDialog.cs: Use a new thread when calling FindGroupChat on the
	  protocol manager, as that one might block and never returns which would
	  let the GUI freeze forever. (closes trac ticket #104)
	
	  Set mouse cursor to busy when searching for chats. (closes trac bug
	  #115)
	* Frontend.cs: Support calls from non-GUI threads in ShowException() and
	  ShowError().
	
	  Added overload of ShowError() with Exception as parameter.

2008-09-02  Mirco Bauer <meebey@meebey.net> 

	* AboutDialog.cs: Added credits for British English and French translation.

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp: Added po files to MonoDevelop projects.

2008-08-31  Mirco Bauer <meebey@meebey.net> 
